# DRCT

./: .gitignore  README.md  REAL_DRCT_GAN_ONNX inference_fp16.py  efficient_inference.py  inference.py  inference_fp16.py  onnx_inference.py  parameter_size.ipynb  predict.py  pyproject.toml  setup.py
Visualization/: LAM_DRCT@Base.ipynb  LAM_SwinIR@Base.ipynb  inference_DRCT_6.ipynb  inference_HAT_4.ipynb  inference_SwinIR_4.ipynb
Visualization/ModelZoo/: __init__.py  utils.py
Visualization/SaliencyModel/: BackProp.py  attributes.py  utils.py
docs/: PERFORMANCE.md  README.md  architecture.md  install.md  internals.md  status.md  usage.md
drct/: _version.py  test.py  train.py  version.py
drct/archs/: DRCT_arch.py  __init__.py  discriminator_arch.py  srvgg_arch.py
drct/data/: __init__.py  imagenet_paired_dataset.py
drct/models/: __init__.py  drct_model.py  realdrctgan_model.py  realdrctmse_model.py
