[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drct"
dynamic = ["version"]
description = "DRCT"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Chia-Ming Lee", email = "zuw408421476@gmail.com" }
]
keywords = ["computer vision", "pytorch", "basicsr", "image restoration", "super-resolution"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "einops",
    "torch>=1.7",
    "basicsr==1.3.4.9"
]

[project.optional-dependencies]
dev = ["cython", "numpy"]

[tool.setuptools]
packages = { find = { exclude = ["options", "datasets", "experiments", "results", "tb_logger", "wandb"] } }

[tool.setuptools.dynamic]
version = { attr = "drct._version.__version__" }

[tool.ruff]
line-length = 120
extend-ignore = ["W503", "W504"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
line_length = 120
profile = "black"
known_first_party = ["basicsr"]
known_third_party = ["cv2", "requests", "torch", "torchvision"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true
